--- a/content/resources/ps10.md
+++ b/content/resources/ps10.md
@@ -5,6 +5,7 @@ description: This resource is a problem set 10 on ultrafast optics and covers 2 
   with mode-locked lasers.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/6-977-ultrafast-optics-spring-2005/1680beb9f4da7ce7af2fcf18ddc623ea_ps10.pdf
 file_type: application/pdf
+parent_uid: 9845fe29-0d78-c2f9-1bd9-ec6c610c7a0e
 resourcetype: Document
 title: ps10.pdf
 uid: 1680beb9-f4da-7ce7-af2f-cf18ddc623ea
